[gd_scene load_steps=26 format=3 uid="uid://sjtxlo2o34i7"]

[ext_resource type="Script" uid="uid://de7ded8v0n8k" path="res://Scenes/executioner_summons.gd" id="1_rgue7"]
[ext_resource type="Texture2D" uid="uid://ckm3jt7n10gu1" path="res://Assets/Underwater/Undead executioner puppet/png/summonIdle.png" id="1_sr8td"]
[ext_resource type="Texture2D" uid="uid://bor4ac4l0qvpk" path="res://Assets/Underwater/Undead executioner puppet/png/summonDeath.png" id="2_rgue7"]
[ext_resource type="Texture2D" uid="uid://dfjmn3ogbjika" path="res://Assets/Underwater/Undead executioner puppet/png/summonAppear.png" id="3_0jaif"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k6djr"]
atlas = ExtResource("1_sr8td")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0460"]
atlas = ExtResource("1_sr8td")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ye4en"]
atlas = ExtResource("1_sr8td")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_8r7gv"]
atlas = ExtResource("1_sr8td")
region = Rect2(150, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgue7"]
atlas = ExtResource("2_rgue7")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jaif"]
atlas = ExtResource("2_rgue7")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_8o72p"]
atlas = ExtResource("2_rgue7")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_dir1m"]
atlas = ExtResource("2_rgue7")
region = Rect2(0, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpmgk"]
atlas = ExtResource("2_rgue7")
region = Rect2(50, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml1gc"]
atlas = ExtResource("2_rgue7")
region = Rect2(100, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_s57ln"]
atlas = ExtResource("3_0jaif")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6qea"]
atlas = ExtResource("3_0jaif")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cj1y"]
atlas = ExtResource("3_0jaif")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_gapw8"]
atlas = ExtResource("3_0jaif")
region = Rect2(0, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ix1qc"]
atlas = ExtResource("3_0jaif")
region = Rect2(50, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmqjh"]
atlas = ExtResource("3_0jaif")
region = Rect2(100, 50, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_u8r6a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6djr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0460")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ye4en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8r7gv")
}],
"loop": true,
"name": &"Chasing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgue7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jaif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o72p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dir1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpmgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml1gc")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s57ln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6qea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cj1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gapw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ix1qc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmqjh")
}],
"loop": true,
"name": &"Summoned",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_rgue7"]
offsets = PackedFloat32Array(0, 0.712329)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0jaif"]
gradient = SubResource("Gradient_rgue7")
fill = 1
fill_from = Vector2(0.5, 0.5)
metadata/_snap_enabled = true

[sub_resource type="CircleShape2D" id="CircleShape2D_0jaif"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rgue7"]

[node name="Executioner_summons" type="CharacterBody2D"]
visible = false
collision_layer = 0
collision_mask = 129
script = ExtResource("1_rgue7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -12)
sprite_frames = SubResource("SpriteFrames_u8r6a")
animation = &"Chasing"
frame_progress = 0.107351

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 192

[node name="Path_line" type="Line2D" parent="."]
width = 5.0
default_color = Color(1, 0, 0, 1)

[node name="Shoot_out_timer" type="Timer" parent="."]
one_shot = true

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(1, 0, 0, 1)
energy = 3.69
shadow_enabled = true
shadow_filter = 2
texture = SubResource("GradientTexture2D_0jaif")
texture_scale = 2.24

[node name="Area2D" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_0jaif")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rgue7")

[connection signal="timeout" from="Shoot_out_timer" to="." method="_on_shoot_out_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
